Removes Reveal TX blob button. Forces dark mode. Fixes bug in truncation

--- a/tools/tenscan/frontend/styles/globals.css
+++ b/tools/tenscan/frontend/styles/globals.css
@@ -50,7 +50,7 @@
     --popover-foreground: 0 0% 70%;
     --border: 0 0% 20%;
     --input:  0 0% 10%;
-    --card: 224 71% 4%;
+    --card: 0 0% 0% 0;
     --card-foreground: 213 31% 91%;
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 1.2%;
